refactor: update icons and components to latest versions

--- a/src/404.html
+++ b/src/404.html
@@ -67,7 +67,7 @@
           <div class="input-prepend input-group">
             <div class="input-group-prepend"><span class="input-group-text">
                 <svg class="c-icon">
-                  <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-magnifying-glass"></use>
+                  <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-magnifying-glass"></use>
                 </svg></span></div>
             <input class="form-control" id="prependedInput" size="16" type="text" placeholder="What are you looking for?"><span class="input-group-append">
               <button class="btn btn-info" type="button">Search</button></span>
