--- a/src/base/tabs.html
+++ b/src/base/tabs.html
@@ -61,21 +61,21 @@
       <ul class="c-sidebar-nav">
         <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="index.html">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-speedometer"></use>
+              <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-speedometer"></use>
             </svg> Dashboard<span class="badge badge-info">NEW</span></a></li>
         <li class="c-sidebar-nav-title">Theme</li>
         <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="colors.html">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-drop1"></use>
+              <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-drop1"></use>
             </svg> Colors</a></li>
         <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="typography.html">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-pencil"></use>
+              <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-pencil"></use>
             </svg> Typography</a></li>
         <li class="c-sidebar-nav-title">Components</li>
         <li class="c-sidebar-nav-item c-sidebar-nav-dropdown"><a class="c-sidebar-nav-link c-sidebar-nav-dropdown-toggle" href="#">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-puzzle"></use>
+              <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-puzzle"></use>
             </svg> Base</a>
           <ul class="c-sidebar-nav-dropdown-items">
             <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="base/breadcrumb.html"><span class="c-sidebar-nav-icon"></span> Breadcrumb</a></li>
@@ -98,7 +98,7 @@
         </li>
         <li class="c-sidebar-nav-item c-sidebar-nav-dropdown"><a class="c-sidebar-nav-link c-sidebar-nav-dropdown-toggle" href="#">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-cursor"></use>
+              <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-cursor"></use>
             </svg> Buttons</a>
           <ul class="c-sidebar-nav-dropdown-items">
             <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="buttons/buttons.html"><span class="c-sidebar-nav-icon"></span> Buttons</a></li>
@@ -109,21 +109,21 @@
         </li>
         <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="charts.html">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-chart-pie"></use>
+              <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-chart-pie"></use>
             </svg> Charts</a></li>
-        <li class="c-sidebar-nav-item c-sidebar-nav-dropdown"><a class="c-sidebar-nav-link c-sidebar-nav-dropdown-toggle" href="#">
+        <li class="c-sidebar-nav-dropdown"><a class="c-sidebar-nav-dropdown-toggle" href="#">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-star"></use>
+              <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-star"></use>
             </svg> Icons</a>
           <ul class="c-sidebar-nav-dropdown-items">
-            <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="icons/coreui-icons.html"><span class="c-sidebar-nav-icon"></span> CoreUI Icons<span class="badge badge-success">Free</span></a></li>
-            <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="icons/flags.html"><span class="c-sidebar-nav-icon"></span> Flags</a></li>
-            <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="icons/brands.html"><span class="c-sidebar-nav-icon"></span> Brands</a></li>
+            <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="icons/coreui-icons-free.html"> CoreUI Icons<span class="badge badge-success">Free</span></a></li>
+            <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="icons/coreui-icons-brand.html"> CoreUI Icons - Brand</a></li>
+            <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="icons/coreui-icons-flag.html"> CoreUI Icons - Flag</a></li>
           </ul>
         </li>
         <li class="c-sidebar-nav-item c-sidebar-nav-dropdown"><a class="c-sidebar-nav-link c-sidebar-nav-dropdown-toggle" href="#">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-bell"></use>
+              <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bell"></use>
             </svg> Notifications</a>
           <ul class="c-sidebar-nav-dropdown-items">
             <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="notifications/alerts.html"><span class="c-sidebar-nav-icon"></span> Alerts</a></li>
@@ -133,40 +133,40 @@
         </li>
         <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="widgets.html">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-calculator"></use>
+              <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-calculator"></use>
             </svg> Widgets<span class="badge badge-info">NEW</span></a></li>
         <li class="c-sidebar-nav-divider"></li>
         <li class="c-sidebar-nav-title">Extras</li>
         <li class="c-sidebar-nav-item c-sidebar-nav-dropdown"><a class="c-sidebar-nav-link c-sidebar-nav-dropdown-toggle" href="#">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-star"></use>
+              <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-star"></use>
             </svg> Pages</a>
           <ul class="c-sidebar-nav-dropdown-items">
             <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="login.html" target="_top">
                 <svg class="c-sidebar-nav-icon">
-                  <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-account-logout"></use>
+                  <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-account-logout"></use>
                 </svg> Login</a></li>
             <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="register.html" target="_top">
                 <svg class="c-sidebar-nav-icon">
-                  <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-account-logout"></use>
+                  <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-account-logout"></use>
                 </svg> Register</a></li>
             <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="404.html" target="_top">
                 <svg class="c-sidebar-nav-icon">
-                  <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-bug"></use>
+                  <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bug"></use>
                 </svg> Error 404</a></li>
             <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link" href="500.html" target="_top">
                 <svg class="c-sidebar-nav-icon">
-                  <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-bug"></use>
+                  <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bug"></use>
                 </svg> Error 500</a></li>
           </ul>
         </li>
         <li class="c-sidebar-nav-item mt-auto"><a class="c-sidebar-nav-link c-sidebar-nav-link-success" href="https://coreui.io" target="_top">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-cloud-download"></use>
+              <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-cloud-download"></use>
             </svg> Download CoreUI</a></li>
         <li class="c-sidebar-nav-item"><a class="c-sidebar-nav-link c-sidebar-nav-link-danger" href="https://coreui.io/pro/" target="_top">
             <svg class="c-sidebar-nav-icon">
-              <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-layers"></use>
+              <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-layers"></use>
             </svg> Try CoreUI<strong>PRO</strong></a></li>
       </ul>
       <button class="c-sidebar-minimizer c-class-toggler" type="button" data-target="_parent" data-class="c-sidebar-minimized"></button>
@@ -183,15 +183,15 @@
         <ul class="c-header-nav ml-auto mr-4">
           <li class="c-header-nav-item d-md-down-none mx-2"><a class="c-header-nav-link" href="#">
               <svg class="c-icon">
-                <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-bell"></use>
+                <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bell"></use>
               </svg></a></li>
           <li class="c-header-nav-item d-md-down-none mx-2"><a class="c-header-nav-link" href="#">
               <svg class="c-icon">
-                <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-list-rich"></use>
+                <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-list-rich"></use>
               </svg></a></li>
           <li class="c-header-nav-item d-md-down-none mx-2"><a class="c-header-nav-link" href="#">
               <svg class="c-icon">
-                <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-envelope-open"></use>
+                <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-envelope-open"></use>
               </svg></a></li>
           <li class="c-header-nav-item dropdown"><a class="c-header-nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
               <div class="c-avatar"><img class="c-avatar-img" src="assets/img/avatars/6.jpg" alt="user@email.com"></div>
@@ -199,36 +199,36 @@
             <div class="dropdown-menu dropdown-menu-right pt-0">
               <div class="dropdown-header bg-light py-2"><strong>Account</strong></div><a class="dropdown-item" href="#">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-bell"></use>
+                  <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-bell"></use>
                 </svg> Updates<span class="badge badge-info ml-auto">42</span></a><a class="dropdown-item" href="#">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-envelope-open"></use>
+                  <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-envelope-open"></use>
                 </svg> Messages<span class="badge badge-success ml-auto">42</span></a><a class="dropdown-item" href="#">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-task"></use>
+                  <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-task"></use>
                 </svg> Tasks<span class="badge badge-danger ml-auto">42</span></a><a class="dropdown-item" href="#">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-comment-square"></use>
+                  <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-comment-square"></use>
                 </svg> Comments<span class="badge badge-warning ml-auto">42</span></a>
               <div class="dropdown-header bg-light py-2"><strong>Settings</strong></div><a class="dropdown-item" href="#">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-user"></use>
+                  <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user"></use>
                 </svg> Profile</a><a class="dropdown-item" href="#">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-settings"></use>
+                  <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-settings"></use>
                 </svg> Settings</a><a class="dropdown-item" href="#">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-credit-card"></use>
+                  <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-credit-card"></use>
                 </svg> Payments<span class="badge badge-secondary ml-auto">42</span></a><a class="dropdown-item" href="#">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-file"></use>
+                  <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-file"></use>
                 </svg> Projects<span class="badge badge-primary ml-auto">42</span></a>
               <div class="dropdown-divider"></div><a class="dropdown-item" href="#">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lock-locked"></use>
+                  <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked"></use>
                 </svg> Lock Account</a><a class="dropdown-item" href="#">
                 <svg class="c-icon mr-2">
-                  <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-account-logout"></use>
+                  <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-account-logout"></use>
                 </svg> Logout</a>
             </div>
           </li>
@@ -314,15 +314,15 @@
                   <ul class="nav nav-tabs" role="tablist">
                     <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#home2" role="tab" aria-controls="home">
                         <svg class="c-icon">
-                          <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-calculator"></use>
+                          <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-calculator"></use>
                         </svg></a></li>
                     <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#profile2" role="tab" aria-controls="profile">
                         <svg class="c-icon">
-                          <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-basket"></use>
+                          <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-basket"></use>
                         </svg></a></li>
                     <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#messages2" role="tab" aria-controls="messages">
                         <svg class="c-icon">
-                          <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-chart-pie"></use>
+                          <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-chart-pie"></use>
                         </svg></a></li>
                   </ul>
                   <div class="tab-content">
@@ -336,15 +336,15 @@
                   <ul class="nav nav-tabs" role="tablist">
                     <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#home3" role="tab" aria-controls="home">
                         <svg class="c-icon">
-                          <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-calculator"></use>
+                          <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-calculator"></use>
                         </svg> Calculator</a></li>
                     <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#profile3" role="tab" aria-controls="profile">
                         <svg class="c-icon">
-                          <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-basket"></use>
+                          <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-basket"></use>
                         </svg> Shoping cart</a></li>
                     <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#messages3" role="tab" aria-controls="messages">
                         <svg class="c-icon">
-                          <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-chart-pie"></use>
+                          <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-chart-pie"></use>
                         </svg> Charts</a></li>
                   </ul>
                   <div class="tab-content">
@@ -358,15 +358,15 @@
                   <ul class="nav nav-tabs" role="tablist">
                     <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#home4" role="tab" aria-controls="home">
                         <svg class="c-icon">
-                          <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-calculator"></use>
+                          <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-calculator"></use>
                         </svg> Calculator<span class="badge badge-success">New</span></a></li>
                     <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#profile4" role="tab" aria-controls="profile">
                         <svg class="c-icon">
-                          <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-basket"></use>
+                          <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-basket"></use>
                         </svg> Shoping cart<span class="badge badge-pill badge-danger">29</span></a></li>
                     <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#messages4" role="tab" aria-controls="messages">
                         <svg class="c-icon">
-                          <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-chart-pie"></use>
+                          <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-chart-pie"></use>
                         </svg> Charts</a></li>
                   </ul>
                   <div class="tab-content">
