--- a/src/register.html
+++ b/src/register.html
@@ -66,28 +66,28 @@
               <div class="input-group mb-3">
                 <div class="input-group-prepend"><span class="input-group-text">
                     <svg class="c-icon">
-                      <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-user"></use>
+                      <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-user"></use>
                     </svg></span></div>
                 <input class="form-control" type="text" placeholder="Username">
               </div>
               <div class="input-group mb-3">
                 <div class="input-group-prepend"><span class="input-group-text">
                     <svg class="c-icon">
-                      <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-envelope-open"></use>
+                      <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-envelope-open"></use>
                     </svg></span></div>
                 <input class="form-control" type="text" placeholder="Email">
               </div>
               <div class="input-group mb-3">
                 <div class="input-group-prepend"><span class="input-group-text">
                     <svg class="c-icon">
-                      <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lock-locked"></use>
+                      <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked"></use>
                     </svg></span></div>
                 <input class="form-control" type="password" placeholder="Password">
               </div>
               <div class="input-group mb-4">
                 <div class="input-group-prepend"><span class="input-group-text">
                     <svg class="c-icon">
-                      <use xlink:href="assets/icons/coreui/free-symbol-defs.svg#cui-lock-locked"></use>
+                      <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-lock-locked"></use>
                     </svg></span></div>
                 <input class="form-control" type="password" placeholder="Repeat password">
               </div>
