--- a/src/icons/coreui-icons-free.html
+++ b/src/icons/coreui-icons-free.html
@@ -175,14 +175,14 @@
       </ul>
       <button class="c-sidebar-minimizer c-class-toggler" type="button" data-target="_parent" data-class="c-sidebar-minimized"></button>
     </div>
-    <div class="c-wrapper">
+    <div class="c-wrapper c-fixed-components">
       <header class="c-header c-header-light c-header-fixed c-header-with-subheader">
         <button class="c-header-toggler c-class-toggler d-lg-none mfe-auto" type="button" data-target="#sidebar" data-class="c-sidebar-show">
           <svg class="c-icon c-icon-lg">
             <use xlink:href="node_modules/@coreui/icons/sprites/free.svg#cil-menu"></use>
           </svg>
         </button><a class="c-header-brand d-lg-none" href="#">
-          <svg class="c-sidebar-brand-full" width="118" height="46" alt="CoreUI Logo">
+          <svg width="118" height="46" alt="CoreUI Logo">
             <use xlink:href="assets/brand/coreui.svg#full"></use>
           </svg></a>
         <button class="c-header-toggler c-class-toggler mfs-3 d-md-down-none" type="button" data-target="#sidebar" data-class="c-sidebar-lg-show" responsive="true">
@@ -1889,11 +1889,11 @@
             </div>
           </div>
         </main>
+        <footer class="c-footer">
+          <div><a href="https://coreui.io">CoreUI</a> &copy; 2020 creativeLabs.</div>
+          <div class="ml-auto">Powered by&nbsp;<a href="https://coreui.io/">CoreUI</a></div>
+        </footer>
       </div>
-      <footer class="c-footer">
-        <div><a href="https://coreui.io">CoreUI</a> &copy; 2020 creativeLabs.</div>
-        <div class="ml-auto">Powered by&nbsp;<a href="https://coreui.io/">CoreUI</a></div>
-      </footer>
     </div>
     <!-- CoreUI and necessary plugins-->
     <script src="node_modules/@coreui/coreui/dist/js/coreui.bundle.min.js"></script>
